user add with empoyee services functions, add validation with dynamic form controls, merge, rem log add valid in profile

--- a/src/app/setting/profile/profile.component.html
+++ b/src/app/setting/profile/profile.component.html
@@ -82,6 +82,9 @@
         <mat-error *ngIf="profileForm.get('email')!.hasError('required')">>
           Email required
         </mat-error>
+        <mat-error *ngIf="!profileForm.get('email')!.hasError('required') && profileForm.get('email')!.hasError('invalidEmail')">
+          Please enter a valid email address
+        </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Language</mat-label>
