--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -56,9 +56,7 @@
                     <button class="dropdown-item" *ngFor="let div of divArr">
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="{{div.id}}">
-                        <label class="form-check-label" for="{{div.id}}">
-                          {{div.name}}
-                        </label>
+                        <label class="form-check-label" for="{{div.id}}">{{div.name}}</label>
                       </div>
                     </button>
                   </div>
@@ -113,7 +111,7 @@
                   </th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody *ngIf="!lstLoading && grps.length > 0">
                 <tr *ngFor="let grp of grps" (click)="toggleDoc(grp)">
                   <td>
                     <span class="d-block">{{grp.name}}</span>
@@ -125,11 +123,14 @@
                 </tr>
               </tbody>
             </table>
+            <div class="text-center text-secondary" *ngIf="!lstLoading && grps.length == 0">
+              No Group found
+            </div>
           </div>
           <div class="card-footer row justify-content-between mx-0">
             <div class="pages">
               <mat-form-field appearance="outline" class="mr-2">
-                <mat-select>
+                <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">>
                   <mat-option *ngFor="let lP of lmtPage" value="lP">{{lP}}</mat-option>
                 </mat-select>
               </mat-form-field>
@@ -137,10 +138,11 @@
             </div>
             <ul class="pagination">
               <li class="page-item disabled">
-                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
+                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true">
+                  <i class="fas fa-chevron-left"></i>
+                </a>
               </li>
-              <li class="page-item active"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a>
-              </li>
+              <li class="page-item active"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
               <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
               <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
               <li class="page-item">
