--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -121,10 +121,13 @@
                         <mat-option *ngFor="let lP of lmtPage" [value]="lP">{{lP}}</mat-option>
                       </mat-select>
                     </mat-form-field>
+                    <span>Showing 1-10 of 100 </span>
                   </div>
                   <ul class="pagination">
                     <li class="page-item disabled">
-                      <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
+                      <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true">
+                        <i class="fas fa-chevron-left"></i>
+                      </a>
                     </li>
                     <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
                     <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
