create password module with api, validation, routing, annoucemnt spelling changes in api and interface, show toaster msg for no internet, add arch encment static fun, serah text,toggle info in grps and user module, emp status and emp grps data set, autocomplete with chips added, merge, empl status added

--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -44,7 +44,7 @@
                                   <td>All Users</td>
                                   <td class="text-hi-dark-grey">01/01/2020</td>
                                   <td>10%</td>
-                                  <td>
+                                  <td (click)="archAncmnt()">
                                     <button class="btn btn-primary btn-sm hover-btn">Archive</button>
                                   </td>
                                 </tr>
