--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -1,1 +1,52 @@
-<p>table works!</p>
+<div class="card-text px-3">
+  <table class="table table-hover text-dark w-100" [ngClass]="{'hide-rows': showRowInfo}">
+    <thead>
+      <tr>
+        <th class="curs-ptr" [ngClass]="{'font-weight-normal': !col.isSelected}" *ngFor="let col of columns"
+          (click)="sortFunc(col.key)">
+          {{col.dispName}}
+          <i class="fas ml-1"
+            [ngClass]="{'fa-sort-down align-top': col.isAsc, 'fa-sort-up align-bottom': !col.isAsc}"></i>
+        </th>
+      </tr>
+    </thead>
+    <tbody *ngIf="!dataLoading && data.length > 0">
+      <tr (click)="toggleInfoFunc(d)" *ngFor="let d of data">
+        <td>
+          {{d.name}}
+        </td>
+        <td class="text-hi-dark-grey">No Status</td>
+        <td>{{d.updatedDate.split('T')[0]}}</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="text-center text-secondary" style="min-height: 230px; padding-top:95px;" *ngIf="data.length == 0">
+    No data found
+  </div>
+  <app-loader [type]="'page'" *ngIf="dataLoading"></app-loader>
+</div>
+<div class="card-footer row justify-content-between mx-0">
+  <div class="pages">
+    <mat-form-field appearance="outline" class="mr-2">
+      <mat-select [(ngModel)]="pageSize" (selectionChange)="pageSizeChangeFunc()">
+        <mat-option [value]="lP" *ngFor="let lP of lmtPage">{{lP}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <!-- <span>Showing 1-10 of {{numAllTags}}</span> -->
+  </div>
+  <ngb-pagination [collectionSize]="totalCount" [(page)]="page" [maxSize]="3" [pageSize]="pageSize" [rotate]="true"
+    [boundaryLinks]="true" (pageChange)="pageChangeFunc()">
+  </ngb-pagination>
+  <!-- <ul class="pagination">
+    <li class="page-item disabled">
+      <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
+          class="fas fa-chevron-left"></i></a>
+    </li>
+    <li class="page-item" *ngFor="let item of [].constructor(paginationNum); let i = index">
+      <a class="page-link bg-hi-grey" href="javascript:void(0)">{{i+1}}</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
+    </li>
+  </ul> -->
+</div>
